--- a/css/base.css
+++ b/css/base.css
@@ -142,7 +142,8 @@
     height: 45px;
     /*border-radius: 5px;*/
     color: white;
-    background: #F5A214;
+    /*background: #F5A214;*/
+    background: red;
     z-index: 2;
     display: flex;
     flex-direction: row;
