--- a/css/base.css
+++ b/css/base.css
@@ -142,8 +142,7 @@
     height: 45px;
     /*border-radius: 5px;*/
     color: white;
-    /*background: #F5A214;*/
-    background: red;
+    background: #F5A214;
     z-index: 99;
     display: flex;
     flex-direction: row;
